--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "lucide-react": "^0.460.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^9.0.1",
     "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
